--- a/frontend/src/app/shared/info-veiculo/info-veiculo.component.scss
+++ b/frontend/src/app/shared/info-veiculo/info-veiculo.component.scss
@@ -1,3 +1,6 @@
+$main-color: #2d3a80;
+$text-color-dark: #3a3a3a;
+
 .container {
     width: calc(100vw - 250px);
     min-height: 100vh;
@@ -10,7 +13,7 @@
         margin: 15px 0;
         text-transform: uppercase;
         font-weight: lighter;
-        color: #2d3a80;
+        color: $main-color;
     }
 
     &__placa {
@@ -18,7 +21,7 @@
         height: 100px;
         background-color: #fff;
         border-radius: 15px;
-        border: 3px solid #3a3a3a;
+        border: 3px solid $text-color-dark;
         overflow: hidden;
 
         &__local {
@@ -38,7 +41,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #2e2e2e;
+            color: $text-color-dark;
             font-size: 42px;
             font-weight: bold;
             text-transform: uppercase;
@@ -50,7 +53,7 @@
         flex-direction: column;
         align-items: center;
         margin-top: 15px;
-        color: #3a3a3a;
+        color: $text-color-dark;
 
         &__tittle {
             font-weight: normal;
