--- a/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.scss
+++ b/frontend/src/app/shared/lista-veiculos/lista-veiculos.component.scss
@@ -1,3 +1,6 @@
+$main-color: #2d3a80;
+$text-color-dark: #3a3a3a;
+
 .principal{
     width: calc(100vw - 250px);
     max-height: 100vh;
@@ -12,7 +15,7 @@
         text-transform: uppercase;
         font-size: 30px;
         font-weight: lighter;
-        color: #2d3a80;
+        color: $main-color;
     }
 }
 
@@ -31,7 +34,7 @@
         
 
         &__head {
-            background-color: #2d3a80;
+            background-color: $main-color;
             color: #fff;
             font-size: 14px;
             line-height: 35px;
@@ -47,7 +50,7 @@
 
         &__body {
             &__row {
-                color: #3a3a3a;
+                color: $text-color-dark;
                 cursor: pointer;
                 font-size: 14px;
                 line-height: 35px;
