--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;1,300&display=swap");
 
+$main-color: #2d3a80;
+$text-color-dark: #3a3a3a;
+
 * {
     margin: 0;
     padding: 0;
