--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<aside class="container">
-    <button class="container__button">
+<aside class="container" id="side-bar">
+    <button class="container__button" (click)="toggleMenu(!isOpen)">
         <fa-icon [icon]="faBars"></fa-icon>
     </button>
     <a class="container__logo" href=""></a>
