--- a/frontend/src/app/shared/info-veiculo/info-veiculo.component.scss
+++ b/frontend/src/app/shared/info-veiculo/info-veiculo.component.scss
@@ -7,10 +7,12 @@ $text-color-dark: #3a3a3a;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 25px;
 
     &__title {
-        margin: 15px 0;
+        margin-bottom: 15px;
+        text-align: center;
         text-transform: uppercase;
         font-weight: lighter;
         color: $main-color;
