--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <button class="container__button" (click)="toggleMenu(!isOpen)">
         <fa-icon [icon]="faBars"></fa-icon>
     </button>
-    <a class="container__logo" href=""></a>
+    <a class="container__logo" (click)="goToHome()">IS</a>
     <ul class="container__list">
         <li class="container__list__item">
             <div class="container__list__item__input-group">
