--- a/frontend/src/app/shared/home/home.component.html
+++ b/frontend/src/app/shared/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<div class="container">
+    <img class="container__image" src="../../../assets/logo-infosistemas.png" alt="">
+</div>
