--- a/frontend/src/app/shared/sobre/sobre.component.html
+++ b/frontend/src/app/shared/sobre/sobre.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1 class="container__title">Bryan Diniz Rodrigues</h1>
     <h2 class="container__subtitle">
-        Sistema desenvolvido para teste de competência da empresa <a href="https://www.linkedin.com/company/info15anos/">Infosistema</a>
+        Sistema desenvolvido para teste de competência da empresa <a href="https://www.linkedin.com/company/info15anos/">Infosistemas</a>
     </h2>
 
     <p class="container__text">
